--- a/client/src/css/home.css
+++ b/client/src/css/home.css
@@ -35,6 +35,9 @@
   .pagination-bar{
     text-align: center;
   }
+  .branded-products{
+    margin-top: 100px;
+  }
   
   @media (max-width: 768px) {
     .product-list {
