--- a/client/src/css/productcard.css
+++ b/client/src/css/productcard.css
@@ -1,6 +1,6 @@
 .product-card {
     display: flex;
-    flex-direction: column;
+    flex-direction:column;
     height: 100%;
     max-width: 600px;
   }
@@ -8,8 +8,9 @@
   .product-card img {
     height: 200px;
     object-fit: cover;
-    max-height: 200px; /* Ensure the image doesn't exceed the card height */
-    max-width: 400px; /* Ensure the image doesn't exceed the card width */
+    min-height:200px ;
+    min-width:300px ;
+    /* Ensure the image doesn't exceed the card width */
   }
   
   /* Add any additional styles as needed */
